--- a/public/registerStyles.css
+++ b/public/registerStyles.css
@@ -1,19 +1,20 @@
-.login-container {
+
+.register-container {
     display:flex;
     justify-content: center;
     margin: auto;
 }
 
-.login-img {
-    background-image: url('https://cdn.pixabay.com/photo/2020/11/09/22/27/garlic-5728008_960_720.jpg');
+.register-img {
+    background: url('https://cdn.pixabay.com/photo/2016/02/19/11/30/pizza-1209748_960_720.jpg') no-repeat;
     width: 300px;
-    height: 600px;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
     box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
+    background-size: cover;
 }
 
-#login-form {
+#register-form {
     display: flex;
     flex-direction: column;
     padding: 10px 30px;
@@ -22,6 +23,7 @@
     border-bottom-right-radius: 15px;
     background-color: #fff;
     width: 390px;
+    height: 650px;
     box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
 }
 
@@ -33,13 +35,13 @@
     margin-bottom: 0;
 }
 
-#login-form h2 {
+#register-form h2 {
     font-family: 'Lobster', sans-serif;
     text-align: center;
     color: #555;
 }
 
-#login-form input {
+#register-form input {
     padding: 10px;
     margin-bottom: 15px;
     font-size: 18px;
@@ -49,12 +51,12 @@
     transition: all .3s;
 }
 
-#login-form input[type=text]:focus, #login-form input[type=password]:focus {
+#register-form input[type=text]:focus, #register-form input[type=password]:focus {
     box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
     transform: translateY(-5px);
 }
 
-#login-form input[type=submit] {
+#register-form input[type=submit] {
     border-radius: 8px;
     outline: none;
     border: 2px solid rgb(0, 140, 255);
@@ -64,13 +66,13 @@
     transition: all .2s;
 }
 
-#login-form input[type=submit]:hover {
+#register-form input[type=submit]:hover {
     background-image: linear-gradient(to bottom, rgba(0, 140, 255), rgb(0, 121, 219));
     color: #fff;
     cursor: pointer; 
 }
 
-#login-message {
+#register-message {
     background-image: linear-gradient(to bottom,  rgb(202, 0, 0), rgb(185, 0, 0));
     color: #fff;
     border-radius: 8px;
